# brood

./: .gitignore  README.md  atkin.py  hamming.py  multiplication_table.py  poisson.ipynb  pyproject.toml  smooth.csv  smooth.txt  timedelta.py  wheel_factor.py
brood/: __init__.py  __main__.py  arrivals.py  cli.py  hamming.py  primes.py  ratelimit.py  schedule.py  scraper.py  swarm.py  tables.py  wheel.py
docs/: literature.md  mathematics.md  rate-limiting.md  scraping.md  swarms.md
scripts/: troubleshoot_ratelimit.py
tests/: test_arrivals.py  test_cli.py  test_hamming.py  test_primes.py  test_ratelimit.py  test_schedule.py  test_scraper.py  test_swarm.py  test_tables.py  test_wheel.py
